--- a/angular/package.json
+++ b/angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular",
+  "name": "Task-Tracker",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -24,10 +24,10 @@
     "@angular/router": "~10.0.5",
     "@angular/service-worker": "~10.0.5",
     "@auth0/angular-jwt": "^5.0.1",
+    "firebase": "^7.13.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
