--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "SET NODE_ENV=dev && node index.js",
+    "prod": "SET NODE_ENV=prod && node index.js"
+
   },
   "dependencies": {
     "bcryptjs": "*",
