--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "SET NODE_ENV=dev && node index.js",
-    "prod": "SET NODE_ENV=prod && node index.js"
+    "prod": "SET NODE_ENV=production && node index.js"
 
   },
   "dependencies": {
